Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -40,14 +40,14 @@ Tak wyglądać może schemat klasy `Human`. Wymienione są jej atrybuty (czyli c
 ![[klasahuman.png]]
 
 
-Analogiczny przykład dla klasy `Zombie` może wyglądać następująco:
+Analogiczny przykład dla klasy `Zombie` wygląda następująco:
 
 ![[klasazombie.png]]
 
 Takie podejście pozwala na zamodelowanie każdej postaci przez jeden obiekt zamiast używania *n* zmiennych czy słownika + zestawu niezależnych funkcji. Skutkuje to większą przejrzystością i porządkiem w projekcie. Do każdego atrybutu czy metody obiektu możemy dostać się z poziomu tego obiektu, podobnie jak dostajemy się do metody `append()` z poziomu listy, którą chcemy zmodyfikować:
 ```python
 my_list = [1, 2, 3]
-my_list.append()
+my_list.append(4)
 ```
 
 ---
@@ -58,7 +58,7 @@ class Human:
     def __init__(self, x, y, velo, power, n_killed=0):
         self.x = x
         self.y = y
-        self.velocity = velo  # nazwy parametru i atrybutu mogą się różnić
+        self.velocity = velo  # nazwy parametru funkcji __init__ i atrybutu mogą się różnić
         self.power = power
         self.n_killed = n_killed
 ```
