--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -63,7 +63,7 @@ class Human:
         self.n_killed = n_killed
 ```
 
-Zaczynamy od słowa kluczowego `class` po którym następuje nazwa klasy. Powinna ona być napisana z wielkiej litery - po tym poznajemy, że coś jest klasą. Następnie wcięty blok kodu zaczynamy od metody \_\_init__(), która będzie wykonana po utworzeniu obiektu. Jej lista parametrów zaczyna się od *self*, czyli odniesienia do obiektu tej klasy. Co ważne, nie jest to żaden konkretny obiekt. *self* odnosi się zawsze do tego obiektu, który aktualnie jest tworzony w \_\_init__(). Pozostałe parametry działają jak w każdej innej funkcji.
+Zaczynamy od słowa kluczowego `class` po którym następuje nazwa klasy. Powinna ona być napisana z wielkiej litery - po tym poznajemy, że coś jest klasą. Następnie wcięty blok kodu zaczynamy od metody \_\_init__(), która będzie wykonana po utworzeniu obiektu. Jej lista parametrów zaczyna się od *self*, który jest odniesieniem do obiektu tej klasy. Co ważne, nie jest to żaden konkretny obiekt. *self* odnosi się zawsze do tego obiektu, który aktualnie jest tworzony w \_\_init__(). Pozostałe parametry działają jak w każdej innej funkcji.
 
 Wewnątrz metody \_\_init__() przypisujemy do poszczególnych atrybutów klasy `Human` wartości pochodzące z przekazanych argumentów. W podobny sposób utworzymy klasę `Zombie`:
 
@@ -77,7 +77,7 @@ class Zombie:
         self.n_infected = n_inf
 ```
 
-W dalszej kolejności utworzymy instancje tych klas poprzez odwołanie się do nazwy klasy jak do funkcji i przekazanie jej jako argumentów tych wartości, które oczekuje \_\_init__() (nie wliczając *self*). 
+W dalszej kolejności utworzymy instancje tych klas poprzez odwołanie się do nazwy klasy jak do funkcji i przekazanie jej jako argumentów tych wartości, których oczekuje \_\_init__() (nie wliczając *self*). 
 
 ```python
 initial_x = 8.53
@@ -104,7 +104,7 @@ print(human.n_killed)
 # 0
 ```
 
-To samo robimy dla `Zombie`. Tym razem, dla urozmaicenia,  przekazujemy wartości wprost, bez tworzenia wcześniej zmiennych:
+To samo robimy dla `Zombie`. Tym razem, dla urozmaicenia,  przekazujemy wartości wprost, bez tworzenia wcześniej zmiennych. To również jest dopuszczalne.
 
 ```python
 zombie = Zombie(1, 2, 3, 4)
