Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -133,7 +133,95 @@ print(zombie.n_infected)
 ---
 &nbsp;
 ### 9.3 Metody
+Oprócz specjalnej metody \_\_init()__ możemy pisać również inne. Przykładowo klasa `Human` może zawierać metody `shoot_zombie()` oraz `shoot_n_zombies()`:
 
+```python
+class Human:
+    def __init__(self, x, y, velo, power, n_killed=0):
+        self.x = x
+        self.y = y
+        self.velocity = velo
+        self.power = power
+        self.n_killed = n_killed
+    
+    def shoot_zombie(self):
+        print("AAAAOOOUUAA!!! <gunshot>  ...")
+            
+    def shoot_n_zombies(self, n):
+        for z in range(n):
+            self.shoot_zombie()
+```
+
+Po utworzeniu instancji możemy się do tych metod odnieść:
+```python
+class Human:
+    def __init__(self, x, y, velo, power, n_killed=0):
+        self.x = x
+        self.y = y
+        self.velocity = velo
+        self.power = power
+        self.n_killed = n_killed
+    
+    def shoot_zombie(self):
+        print("AAAAOOOUUAA!!! <gunshot>  ...")
+            
+    def shoot_n_zombies(self, n):
+        for z in range(n):
+            self.shoot_zombie()
+
+
+human = Human(1, 2, 3, 4)
+
+human.shoot_zombie()
+# AAAAOOOUUAA!!! <gunshot>  ...
+
+human.shoot_n_zombies(3)
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+```
+
+Kiedy w jednej metodzie odwołujemy się do innej, należy poprzedzić ją słowem `self`. W powyższym przykładzie metoda `shoot_zombie()` jest częścią klasy a nie luźną funkcją, dlatego wewnątrz `shoot_n_zombies()` odnosimy się do niej poprzez `self.shoot_zombie()`.
+
+---
+Do klasy `Zombie` dodajmy teraz metodę `move()`, która będzie modyfikować współrzędne (x, y) o określony wektor.
+
+```python
+class Zombie:
+    def __init__(self, x, y, velo, power, n_inf=0):
+        self.x = x  
+        self.y = y
+        self.velocity = velo
+        self.power = power
+        self.n_infected = n_inf
+        
+    def move(self, delta_x, delta_y):
+        self.x = self.x + delta_x
+        self.y = self.y + delta_y
+```
+
+Tutaj również odnosząc się do elementu klasy (atrybutu) poprzedzamy go słowem *self*. Inaczej byłaby to zwykła zmienna. Działanie metody `move()` jest następujące:
+
+```python
+zombie = Zombie(0, 0, 2, 4)
+
+print(zombie.x)
+print(zombie.y)
+# 0
+# 0
+
+zombie.move(1, 2)
+
+print(zombie.x)
+print(zombie.y)
+# 1
+# 2
+```
+
+**Metody - podsumowanie:**
+- Funkcje wchodzące w skład klasy nazywamy metodami. Wykonują one pewne operacje, zwykle odnosząc się do instancji klasy
+- Odnosząc się do atrybutów lub innych metod należy używać słowa `self`
+- Aby odwołać się do metody obiektu należy użyć zapisu `<object_name>.<method_name>`
 ---
 ---
 ---
