Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -127,7 +127,7 @@ print(zombie.n_infected)
 - Klasa to abstrakcyjny opis zawierający zbiór atrybutów (własności) oraz metod (funkcji) używanych do modelowania obiektów tej klasy
 - W Pythonie istnieją klasy wbudowane (np. *str*, *int*, *float*, ...) ale możemy tworzyć również własne. Wówczas ich nazwa powinna zaczynać się od wielkiej litery
 - Klasy prawie zawsze posiadają metodę inicjalizacyjną, która zawiera zestaw instrukcji jakie zostają wykonane po utworzeniu obiektu. Przede wszystkim są tam przypisywane wartości do atrybutów
-- Aby odwołać się do atrybutu obiektu należy użyć zapisu `<object_name>.<attribute_name>`
+- Aby odwołać się do atrybutu obiektu poza klasą należy użyć zapisu `<object_name>.<attribute_name>`
 ---
 ---
 ---
@@ -220,8 +220,8 @@ print(zombie.y)
 
 **Metody - podsumowanie:**
 - Funkcje wchodzące w skład klasy nazywamy metodami. Wykonują one pewne operacje, zwykle odnosząc się do instancji klasy
-- Odnosząc się do atrybutów lub innych metod należy używać słowa `self`
-- Aby odwołać się do metody obiektu należy użyć zapisu `<object_name>.<method_name>`
+- Odwołując się do atrybutów lub innych metod należy używać słowa `self`
+- Aby odwołać się do metody obiektu poza klasą należy użyć zapisu `<object_name>.<method_name>`
 ---
 ---
 ---
