Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -227,6 +227,85 @@ print(zombie.y)
 ---
 &nbsp;
 ### 9.4 staticmethod, classmethod
+#### *staticmethod*
+Zazwyczaj wewnątrz metod odnosimy się do instancji klasy poprzez `self`. Może się jednak zdarzyć, że nie ma takiej potrzeby. Wówczas lepiej jest nie przekazywać do metody `self` - mamy w takim wypadku do czynienia z **metodą statyczną**. Trzeba to zawsze oznaczyć za pomocą dopisku `@staticmethod` nad sygnaturą funkcji:
+```python
+class Human:
+    def __init__(self, x, y, velo, power, n_killed=0):
+        self.x = x
+        self.y = y
+        self.velocity = velo
+        self.power = power
+        self.n_killed = n_killed
+    
+    @staticmethod
+    def shoot_zombie():
+        print("AAAAOOOUUAA!!! <gunshot>  ...")
+    
+    def shoot_n_zombies(self, n):
+        for z in range(n):
+            self.shoot_zombie()
+            
+    def move(self, delta_x, delta_y):
+        self.x = self.x + delta_x
+        self.y = self.y + delta_y
+```
+
+Do metod statycznych odwołujemy się tak samo jak do zwykłych:
+```python
+human = Human(1, 2, 3, 4)
+
+human.shoot_zombie()
+# AAAAOOOUUAA!!! <gunshot>  ...
+```
+
+#### *classmethod*
+Może się zdarzyć, że wewnątrz funkcji chcemy się odwołać nie do danego obiektu (*self*) ale do klasy jako takiej. Celem może być na przykład alternatywny sposób stworzenia obiektów. Ponieważ w trakcie tworzenia instancji musimy się odwołać do klasy, przydatna będzie wtedy `classmethod`.
+
+```python
+class Human:
+    def __init__(self, x, y, velo, power, n_killed=0):
+        self.x = x
+        self.y = y
+        self.velocity = velo
+        self.power = power
+        self.n_killed = n_killed
+    
+    @classmethod
+    def create_multiple_objects(cls, data_list_of_lists):
+        created_objects = []
+        for data in data_list_of_lists:
+            obj = cls(*data)
+            created_objects.append(obj)
+            
+        return created_objects
+```
+
+W powyższym przykładzie metoda `create_multiple_objects()` przyjmuje jako pierwszy argument `cls` czyli odniesienie do klasy (w tym przypadku klasy `Human`) oraz listę list z danymi wejściowymi potrzebnymi do stworzenia listy instancji. Następnie poszczególne wewnętrzne listy są używane do utworzenia obiektów z wykorzystaniem *arguments unpacking*. Na koniec zwracamy listę stworzonych instancji.
+
+Użycie tej metody wyglądać będzie w następujący sposób:
+```python
+humans = Human.create_multiple_objects([[2, 3, 4, 5],
+                                        [12, 13, 14, 15]])
+
+human = humans[0]
+
+print(human.x)
+print(human.y)
+print(human.velocity)
+print(human.power)
+print(human.n_killed)
+# 2
+# 3
+# 4
+# 5
+# 0
+```
+
+**`staticmethod`, `classmethod` - podsumowanie:**
+- Jeżeli metoda nie odnosi się do *self* powinna być oznaczona jako metoda statyczna. Odwołujemy się do niej tak samo jak do zwykłej metody
+- Jeżeli metoda odnosi się do klasy, np. w celu utworzenia jej instancji, jest to *classmethod*. Jej pierwszym parametrem powinno być `cls`
+
 
 ---
 ---
