Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -312,7 +312,46 @@ print(human.n_killed)
 ---
 &nbsp;
 ### 9.5 Dziedziczenie
+Może się zdarzyć, że mamy do napisania kilka klas, które współdzielą część atrybutów albo metod. Wówczas nie ma konieczności pisać każdej klasy oddzielnie - możemy zebrać wszystkie wspólne funkcjonalności w jednej klasie bazowej, której potem uzyjemy jako punkt wyjścia do stworzenia kolejnych - pochodnych.
 
+Robimy to w następujacy sposób. Zacznijmy od stworzenia klasy `Vehicle`, która będzie reprezentować dowolny pojazd. Każdy pojazd ma jakis kolor, wagę oraz przebieg. Ma też możliwość przejechania jakiegoś dystansu, czyli zwiększenia przebiegu.
+
+```python
+class Vehicle:
+    def __init__(self, color, weight, mileage):
+        self.color = color
+        self.weight = weight
+        self.mileage = mileage
+        
+    def ride(self, distance):
+        self.mileage += distance
+```
+
+Teraz żeby zamodelowac bardziej konkretny pojazd, np. samochód należy stworzyć klasę dziedziczącą. Wewnątrz metody inicjalizacyjnej klasy pochodnej odwołujemy się do *inita* klasy bazowej:
+
+```python
+class Car(Vehicle):
+    def __init__(self, color, weight, mileage):
+        super().__init__(color, weight, mileage)
+```
+
+W tym momencie klasa `Car` nie posiada żadnych dodatkowych atrybutów ani metod a jedynie przejęła te, które ma `Vehicle`. Żeby dodać nowe atrybuty/metody należy zrobić to tak samo jak w zwykłej klasie:
+
+```python
+class Car(Vehicle):
+    def __init__(self, color, weight, mileage, fuel_amount, combustion_level, n_of_wheels=4):
+        super().__init__(color, weight, mileage)
+        self.fuel_amount = fuel_amount
+        self.combustion_level = combustion_level
+        self.n_of_wheels = n_of_wheels
+    
+    def refuel(self, amount):
+        self.fuel_amount += amount
+        
+        
+
+c = Car("white", 1200, 50, 30, 7)
+```
 ---
 ---
 ---
