Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -339,10 +339,9 @@ W tym momencie klasa `Car` nie posiada żadnych dodatkowych atrybutów ani metod
 
 ```python
 class Car(Vehicle):
-    def __init__(self, color, weight, mileage, fuel_amount, combustion_level, n_of_wheels=4):
+    def __init__(self, color, weight, mileage, fuel_amount, n_of_wheels=4):
         super().__init__(color, weight, mileage)
         self.fuel_amount = fuel_amount
-        self.combustion_level = combustion_level
         self.n_of_wheels = n_of_wheels
     
     def refuel(self, amount):
@@ -350,8 +349,23 @@ class Car(Vehicle):
         
         
 
-c = Car("white", 1200, 50, 30, 7)
+c = Car("white", 1200, 50, 30)
 ```
+
+Teraz możemy odnosić się do nowych atrybutów oraz metod klasy `Car`:
+
+```python
+print(c.fuel_amount)
+# 30
+
+c.refuel(40)
+print(c.fuel_amount)
+# 70
+```
+
+**Dziedziczenie - podsumowanie:**
+- Jeśli tworzymy kilka klas, które współdzielą część atrybutów albo metod możemy utworzyć klasę bazową oraz jedną lub więcej klasy dziedziczące po niej
+- Klasy dziedziczące przejmują wszystkie atrybuty oraz metody klasy bazowej a także mogą posiadać własne
 ---
 ---
 ---
