--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -371,6 +371,82 @@ print(c.fuel_amount)
 ---
 &nbsp;
 ### 9.6 Stringifikacja i reprezentacja
+Kiedy wyświetlamy obiekt w konsoli albo printujemy go, zawsze widzimy kawałek tekstu, który odzwierciedla zawartość obiektu. Są to tzw. **reprezentacja** oraz **stringifikacja**. Reprezentację widzimy po odniesieniu się do obiektu w konsoli lub Jupyter Notebooku, natomiast stringifikacja pojawia się kiedy wyprintujemy obiekt lub zrzutujemy go na stringa. Takie zachowanie możemy obserwować na każdym typie obiektu. Jednak tworząc własne klasy mamy wpływ na to jak wyglądają reprezentacja oraz stringifikacja.
+
+Zobaczmy przykład na poniższej klasie `List`, która będzie do pewnego stopnia imitowała wbudowaną klasę `list`. Na początek zdefiniujemy metodę inicjalizacyjną oraz `append()`. Stworzymy również instancję klasy i wyświetlimy ją na różne sposoby. Pozwoli to zobaczyć domyślną reprezentację i stringifikację.
+
+```python
+class List:
+    def __init__(self, *args):
+        self.values = [item for item in args]
+    
+    def append(self, new_item):
+        self.values += [new_item]
+
+
+my_list = List(3, 2, 5, 3)
+my_list
+# <__main__.List at 0x7f8fd708e5b0>
+
+print(my_list)
+# <__main__.List object at 0x7f8fd708e5b0>
+
+```
+
+Następnie dodajmy specjalne metody \_\_repr()__ oraz \_\_str()\_\_. Na razie będą one zwracać bardzo proste stringi.
+```python
+class List:
+    def __init__(self, *args):
+        self.values = [item for item in args]
+    
+    def __repr__(self):
+        return "list-repr"
+
+    def __str__(self):
+        return "list-str"
+        
+    def append(self, new_item):
+        self.values += [new_item]
+
+
+my_list = List(3, 2, 5, 3)
+my_list
+# list-repr
+
+print(my_list)
+# list-str
+```
+
+Możemy w taki sposób zaimplementować reprezentację i stringifikację, aby przekazywały one informacje o zawartości obiektu:
+
+```python
+class List:
+    def __init__(self, *args):
+        self.values = [item for item in args]
+    
+    def __repr__(self):
+        return f"UserDefinedList({', '.join([str(i) for i in self.values])})"
+
+    def __str__(self):
+        return f"[{', '.join([str(i) for i in self.values])}]"
+    
+    def append(self, new_item):
+        self.values += [new_item]
+
+
+my_list = List(3, 2, 5, 3)
+my_list
+# UserDefinedList(3, 2, 5, 3)
+
+print(my_list)
+# [3, 2, 5, 3]
+```
+
+**Stringifikacja i reprezentacja - podsumowanie:**
+- Aby zmodyfikować domyślny sposób w jaki reprezentowane są obiekty możemy dodać do klasy metody specjalne  \_\_repr()__ oraz \_\_str()\_\_
+- Reprezentacja jest widoczna podczas odwołania się do obiektu w konsoli. Przedstawia ona zawartość obiektu w sposób schematyczny, często zawierając kod, który mógłby być użyty do stworzenia obiektu. Powinna być zrozumiała dla programisty
+- Stringifikacja jest widoczna podczas printowania obiektu lub rzutowania go na string. Powinna przedstawiać zawartość obiektu w sposób przyjazny dla odbiorcy koncowego
+
 
 ---
 ---
