Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -371,7 +371,7 @@ print(c.fuel_amount)
 ---
 &nbsp;
 ### 9.6 Stringifikacja i reprezentacja
-Kiedy wyświetlamy obiekt w konsoli albo printujemy go, zawsze widzimy kawałek tekstu, który odzwierciedla zawartość obiektu. Są to tzw. **reprezentacja** oraz **stringifikacja**. Reprezentację widzimy po odniesieniu się do obiektu w konsoli lub Jupyter Notebooku, natomiast stringifikacja pojawia się kiedy wyprintujemy obiekt lub zrzutujemy go na stringa. Takie zachowanie możemy obserwować na każdym typie obiektu. Jednak tworząc własne klasy mamy wpływ na to jak wyglądają reprezentacja oraz stringifikacja.
+Kiedy wyświetlamy obiekt w konsoli albo printujemy go, zawsze widzimy kawałek tekstu, który odzwierciedla zawartość obiektu. Może to być tzw. **reprezentacja** albo **stringifikacja**. Reprezentację widzimy po odniesieniu się do obiektu w konsoli lub Jupyter Notebooku, natomiast stringifikacja pojawia się kiedy wyprintujemy obiekt lub zrzutujemy go na stringa. Takie zachowanie możemy obserwować na każdym typie obiektu. Jednak tworząc własne klasy mamy wpływ na to jak wyglądają reprezentacja oraz stringifikacja.
 
 Zobaczmy przykład na poniższej klasie `List`, która będzie do pewnego stopnia imitowała wbudowaną klasę `list`. Na początek zdefiniujemy metodę inicjalizacyjną oraz `append()`. Stworzymy również instancję klasy i wyświetlimy ją na różne sposoby. Pozwoli to zobaczyć domyślną reprezentację i stringifikację.
 
@@ -425,7 +425,7 @@ class List:
         self.values = [item for item in args]
     
     def __repr__(self):
-        return f"UserDefinedList({', '.join([str(i) for i in self.values])})"
+        return f"List({', '.join([str(i) for i in self.values])})"
 
     def __str__(self):
         return f"[{', '.join([str(i) for i in self.values])}]"
