Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -453,6 +453,44 @@ print(my_list)
 ---
 &nbsp;
 ### 9.7 class attribute
+Jeżeli klasa posiada atrybut, który z założenia będzie miał taką samą wartość dla wszystkich instancji tej klasy możemy stworzyć go jako *class attribute*. Atrybut klasy to taki, którego wartość jest przypisana do całej klasy a nie tylko do jednego obiektu. Można powiedzieć, że wszystkie instancje danej klasy współdzielą ten atrybut i ma on dla nich taką samą wartość. 
+
+Atrybut klasy tworzony jest wewnątrz defincji klasy, ale jeszcze przed metodą \_\_init()__.
+
+```python
+class Human:
+    movement_dict = {"slow": 0.8, "normal": 1, "fast": 1.5}
+    
+    def __init__(self, x, y, velo):
+        self.x = x
+        self.y = y
+        self.velo = velo
+        
+    def move(self, delta_x, delta_y, how_fast="normal"):
+        self.x = self.x + delta_x*self.movement_dict[how_fast]
+        self.y = self.y + delta_y*self.movement_dict[how_fast]
+        
+
+human = Human(0, 0, 1)
+
+human.move(0, 1, "fast")
+print(human.x)
+print(human.y)
+# 0
+# 1.5
+
+# ------
+Human.movement_dict
+# {"slow": 0.8, "normal": 1, "fast": 1.5}
+```
+
+Zarówno wewnątrz jak i na zewnątrz klasy odnosimy się do niego w taki sam sposób jak do zwykłych atrybutów.
+
+**class attribute - podsumowanie:**
+- Jeżeli wszystkie instancje klasy współdzielą wartość pewnego atrybuty można użyć w tym celu *class attribute*
+- Wartość tego atrybutu jest przypisana nie tylko do obiektów, ale również do całej klasy
+
+
 
 ---
 ---
