Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -453,7 +453,7 @@ print(my_list)
 ---
 &nbsp;
 ### 9.7 class attribute
-Jeżeli klasa posiada atrybut, który z założenia będzie miał taką samą wartość dla wszystkich instancji tej klasy możemy stworzyć go jako *class attribute*. Atrybut klasy to taki, którego wartość jest przypisana do całej klasy a nie tylko do jednego obiektu. Można powiedzieć, że wszystkie instancje danej klasy współdzielą ten atrybut i ma on dla nich taką samą wartość. 
+Jeżeli klasa posiada atrybut, który z założenia będzie miał taką samą wartość dla wszystkich instancji tej klasy możemy stworzyć go jako *class attribute*. Atrybut klasy to taki, którego wartość jest przypisana do całej klasy a nie tylko do jednego obiektu. Można powiedzieć, że wszystkie instancje danej klasy współdzielą ten atrybut i ma on dla nich taką samą wartość (o ile go nie nadpiszemy).
 
 Atrybut klasy tworzony jest wewnątrz defincji klasy, ale jeszcze przed metodą \_\_init()__.
 
@@ -487,7 +487,7 @@ Human.movement_dict
 Zarówno wewnątrz jak i na zewnątrz klasy odnosimy się do niego w taki sam sposób jak do zwykłych atrybutów.
 
 **class attribute - podsumowanie:**
-- Jeżeli wszystkie instancje klasy współdzielą wartość pewnego atrybuty można użyć w tym celu *class attribute*
+- Jeżeli wszystkie instancje klasy współdzielą wartość pewnego atrybutu można użyć w tym celu *class attribute*
 - Wartość tego atrybutu jest przypisana nie tylko do obiektów, ale również do całej klasy
 
 
