Just another update

--- a/Python podstawowy/10. Praca z plikami.md
+++ b/Python podstawowy/10. Praca z plikami.md
@@ -1,33 +1,132 @@
 ### 10.1 Pliki txt
-...
+Zdarza się, że pewne informacje istniejące w pisanym przez nas programie chcemy zapisać do pliku w celu ich przechowania. Może być i tak, że chcemy wczytać informacje z już istniejącego pliku. W celu warto poznać przynajmniej podstawy pracy z plikami. Na początku będą to pliki tekstowe.
+
+#### 10.1.1 Operacje zapisu
+Aby zapisać wartość zmiennej typu string do pliku należy najpierw stworzyć tę zmienną:
+
+```python
+my_text = "hello world"
+my_text_long = "Lorem ipsum\n" * 10
+
+
+print(my_text, '\n\n')
+print(my_text_long)
+
+# hello world 
+
+
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+# Lorem ipsum
+```
+
+Następnie za pomocą poniższego kodu zapiszemy obie utworzone zmienne do plików:
+
+```python
+with open("files/hello_world.txt", "w") as file:
+    file.write(my_text)
+    
+
+with open("files/lorem_ipsum.txt", "w") as file:
+    file.write(my_text_long)
+```
+
+Użyliśmy w tym celu ścieżek, pod którymi mają znaleźć się nowe pliki. Pliki te otwieramy w trybie "w" co oznacza zapis (*write*). Tryb "w" najpierw usuwa całą zawartość pliku tekstowego (jeśli ten istnieje) a następnie zapisuje do niego odpowiednie dane. Aby dopisać nowy tekst do aktualnej zawartości pliku, nalezy otworzyć go w trybie "a" (*append*).
+
+```python
+with open("files/hello_world.txt", "a") as file:
+    file.write(my_text + "\n") 
+```
+
+---
+Jeśli chcemy zapisać do pliku kolejne elementy listy jeden po dugim możemy zrobić to za pomocą funkcji `writelines()`:
+
+```python
+list_to_write = ["test\n"] * 10
+
+with open("files/test_writelines.txt", "w") as file:
+    file.writelines(list_to_write)
+```
+
+
+#### 10.1.2 Operacje odczytu
+
+Aby wczytać zawartość pliku nalezy otworzyć go w trybie odczytu "r" (*read*) a następnie użyć funkcji `read()`:
+
+```python
+with open("files/hello_world.txt", "r") as file:
+    read_file = file.read()
+
+print(read_file)
+# hello world
+```
+
+---
+Aby wczytać kolejne linie pliku tekstowego do osobnych elementów listy należy skorzystać z funkcji `readlines()`. 
+
+```python
+with open("files/test_writelines.txt", "r") as file:
+    read_file_lines = file.readlines()  # readlines wczytuje do listy
+
+    
+print(read_file_lines)
+
+# ['test\n', 'test\n', 'test\n', 'test\n', 'test\n',
+#  'test\n', 'test\n', 'test\n', 'test\n', 'test\n']
+```
+
+
+#### 10.1.3 Tryby otwierania plików
+
+Oprócz powyżej opisanych trybów otwierania pliku występują również inne. Najważniejsze z nich zostały zebrane w poniższej tabeli:
+
+| Tryb    | Opis  |
+| ------------- | ---------- |
+| r   | Read - pozwala wczytać treść pliku |
+| w   | Write - pozwala zapisać treść do pliku. Jego dotychczasowa treść zostaje nadpisana  |
+| a | Append - działa podobnie jak write, ale nie kasuje z pliku dotychczasowej zawartości  |
+| rb | Read bytes - wczytuje plik i tworzy obiekt typu bytes |
+| wb | Write bytes - zapisuje obiekt typu bytes do pliku|
+
+
+**Pliki txt - podsumowanie:**
+- Aby wczytać lub zapisać plik tekstowy nalezy otworzyć go za pomocą funkcji `open()`
+- Tryb odczytu oznaczamy jako "r", tryb zapisu jako "w" a tryb *append* jako "a"
+- Możemy zapisywać listy lub wczytywać pliki tekstowe do list za pomocą funkcji `writelines()` oraz `readlines()`
+- Aby odczytywać albo zapisywać zmienne typu *bytes* otwieramy plik w trybie "rb" lub "wb"
+
+
 
 ---
 ---
 ---
 &nbsp;
 ### 10.2 Kodowanie znaków
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 10.3 Pliki json
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 10.4 pickle
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 10.5 Biblioteka os
-...
 
 ---
 ---
