Just another update

--- a/Python podstawowy/10. Praca z plikami.md
+++ b/Python podstawowy/10. Praca z plikami.md
@@ -1,5 +1,5 @@
 ### 10.1 Pliki txt
-Zdarza się, że pewne informacje istniejące w pisanym przez nas programie chcemy zapisać do pliku w celu ich przechowania. Może być i tak, że chcemy wczytać informacje z już istniejącego pliku. W celu warto poznać przynajmniej podstawy pracy z plikami. Na początku będą to pliki tekstowe.
+Zdarza się, że pewne informacje istniejące w pisanym przez nas programie chcemy zapisać do pliku w celu ich przechowania. Może być i tak, że chcemy wczytać informacje z już istniejącego pliku. W tym celu warto poznać przynajmniej podstawy pracy z plikami. Na początku będą to pliki tekstowe.
 
 #### 10.1.1 Operacje zapisu
 Aby zapisać wartość zmiennej typu string do pliku należy najpierw stworzyć tę zmienną:
