--- a/Python podstawowy/2. Podstawy.md
+++ b/Python podstawowy/2. Podstawy.md
@@ -67,7 +67,7 @@ Innym zastosowaniem komentarzy, którego również nie powinniśmy nadużywać 
 
 ---
 
-W wielu językach programowania istnieją tzw. komentarze blokowe, czyli takie które obejmują więcej niż jedną linię kodu. W Pythonie nie istnieją takie komentarze, ale ich rolę mogą spełniać wielolinijkowe stringi. Aby utworzyć wielolinijkowego stringa - używamy potrójnych cudzysłowów (lub apostrofów):
+W wielu językach programowania istnieją tzw. komentarze blokowe, czyli takie które obejmują więcej niż jedną linię kodu. W Pythonie nie istnieją takie komentarze, ale ich rolę mogą spełniać wielolinijkowe stringi nie przypisane do zmiennej. Aby utworzyć wielolinijkowego stringa używamy potrójnych cudzysłowów (lub apostrofów):
 
 ```python
 """
