Just another update

--- a/Python podstawowy/2. Podstawy.md
+++ b/Python podstawowy/2. Podstawy.md
@@ -306,7 +306,7 @@ round(3.1415926, 2)
 ---
 &nbsp;
 ### 2.5 Operacje arytmetyczne
-Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosowanie zgodne z tym jak działają one w kalkulatorach. Jeżel chcemy wykonać na dwóch liczbach operację arytmetyczną możemy zrobić to w bardzo intuicyjny sposób, np.:
+Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosowanie zgodne z tym jak działają one w kalkulatorach. Jeżeli chcemy wykonać na dwóch liczbach operację arytmetyczną możemy zrobić to w bardzo intuicyjny sposób, np.:
 
 ```python
 2 + 2
