--- a/Python podstawowy/3. Struktury danych.md
+++ b/Python podstawowy/3. Struktury danych.md
@@ -105,7 +105,7 @@ x = (1, 2, 3)
 x = 1, 2, 3
 ```
 
-Należy o tym pamiętać zwłaszcza przy tworzeniu jednoelementowej tupli kiedy użycie przecinka może wydać się niepotrzebne. Poniżej znajdują się 4 zapisy, spośród których tylko dwa ostatnie poprawnie tworzą jednoelementową tuplę: 
+Należy o tym pamiętać zwłaszcza przy tworzeniu jednoelementowej tupli kiedy użycie przecinka może wydać się niepotrzebne. Poniżej znajdują się 4 zapisy, spośród których tylko 2 ostatnie poprawnie tworzą jednoelementową tuplę: 
 
 ```python
 one_item_tuple = "hello"  # string
@@ -155,7 +155,7 @@ zombie_character = {"class": "Zombie",
                     "power": 10, "is alive": True, "killed at": None}
 ```
 
-Składnia dicta jest następująca - otwieramy oraz zamykamy go nawiasami klamrowymi wewnątrz których znajdują się oddzielone przecinkiem pary klucz-wartość, takie że najpierw podajemy klucz a po dwukropku wartość jaka się pod nim kryje.
+Składnia dicta jest następująca - otwieramy oraz zamykamy go nawiasami klamrowymi wewnątrz których znajdują się oddzielone przecinkiem pary klucz-wartość, takie że najpierw podajemy klucz a po dwukropku wartość jaka się pod nim znajduje.
 
 Aby wyciągnąć wartość która przechowywana jest pod danym kluczem używamy - podobnie jak przy listach oraz tuplach - nawiasów kwadratowych. Jednak zamiast podawania indeksu (pozycji) elementu, który nas interesuje używamy odpowiedniego klucza.
 Przykładowo aby wyciągnąć wartość pod kluczem "velocity" piszemy:
@@ -807,22 +807,23 @@ simulation_config["humans_start_positions"][-1][0]
 ### 3.8 Wbudowane generatory cz. 1
 Generator to obiekt, który zwraca sekwencję wartości, przy czym nie trafiają one jednocześnie do pamięci. Są generowane po kolei a następnie zapominane. Mechanizm ten nazywa się *lazy evalution*. 
 
-Więcej o generatorach i tym jak możemy je tworzyć znajduje się w [[12. Pozostałe zagadnienia#12.3 Generatory|osobnym temacie]]. Jest jednak szereg wbudowanych generatorów, których możemy używać bez samodzielnego definiowania ich. Są one przydatne m.in. przy pracy ze strukturami danych.
+Możemy tworzyć własne generatory, jednak istnieje szereg wbudowanych generatorów, których możemy używać bez samodzielnego definiowania ich. Są one przydatne m.in. przy pracy ze strukturami danych. Należą do nich m.in. `zip` oraz `enumerate`.
 
-#### 3.8.1 `zip`
+#### *zip*
 Generator `zip` służy do łączenia w pary (trójki, czwórki itd.) elementów z dwóch lub więcej sekwencji. Działa na podobnej zasadzie co zamek błyskawiczny:
 ```python
 x_coordinates = [2, 5, 3]
 y_coordinates = [3, 6, 1]
 
 zip(x_coordinates, y_coordinates)
+# <zip at 0x7f1c15715300>
 ```
 
-Samo wywołanie zipa zwróci obiekty typu `zip`: `<zip at 0x7f1c15715300>`. Jeśli jednak zrzutujemy go na listę:
+Samo wywołanie zipa zwróci obiekt typu `zip`: `<zip at 0x7f1c15715300>`. Jeśli jednak zrzutujemy go na listę:
 ```python
 list(zip(x_coordinates, y_coordinates))
 ```
-Otrzymamy listę tupli będących parami elementów z list `x_coordinates` oraz `y_coordinates` czyli:
+otrzymamy listę tupli będących parami elementów z list `x_coordinates` oraz `y_coordinates` czyli:
 `[(2, 3), (5, 6), (3, 1)]`
 
 Liczba sekwencji przekazanych do zipa może być dowolna. Jeśli sekwencje te będą miały różną liczbę elementów, `zip` zwróci listę o długości równej najkrótszej z sekwencji:
@@ -833,7 +834,7 @@ list(zip((1, 2, 3), ("a", "b", "c", "d"), (10, 20)))
 # [(1, 'a', 10), (2, 'b', 20)]
 ```
 
-#### 3.8.2 `enumerate`
+#### *enumerate*
 Generator `enumerate` przyjmuje jako argument jedną sekwencję i zwraca obiekt typu `enumerate`:
 ```python
 enumerate(x_coordinates)
