--- a/Python podstawowy/4. Instrukcje warunkowe.md
+++ b/Python podstawowy/4. Instrukcje warunkowe.md
@@ -35,60 +35,60 @@ variable is not None    # False
 ---
 &nbsp;
 ### 4.2 Spójniki logiczne
-Spójniki logiczne służą do łączenia dwóch lub więcej warunków logicznych. Wyróżniamy dwa podstawowe spójniki: *and* oraz *or*. *and* oznacza że dla dwóch warunków logicznych oba muszą być prawdziwe żeby całość uznać za prawdę natomiast *or* oznacza że przynajmniej jeden musi być spełniony.
-
-```python
-true = True
-false = False
-```
-
-***and***
-```python
-true and true     # True
-true and false    # False
-false and true    # False
-false and false   # False
-```
-
-***or***
-```python
-true or true     # True
-true or false    # True
-false or true    # True
-false or false   # False
-```
-
-Oprócz tego istnieje również spójnik *xor* czyli *exclusive or*. Oznacza on, że aby warunki połączone takim spójnikiem zwróciły *True* prawdziwy musi być dokładnie jeden z nich. Jako spójnik *xor* używamy znaku `^`:
-
-```python
-true ^ true     # False
-true ^ false    # True
-false ^ true    # True
-false ^ false   # False
-```
-
----
-Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wówczas należy pamiętać o kolejności obowiązywania spójników - pierwszeństwo ma *and* a za nim jest *or*. Oprócz tego obowiązują nawiasy, które mają pierwszeństwo również przed *and*. Poniżej kilka przykładów tego co zwrócą kombinacje warunków logicznych:
-```python
-True and True and False   # False
-True or False or False    # True
-True or True and False    # True
-(True or True) and False  # False
-False or True and False   # False
-```
-
-Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub większości możemy to zapisać korzystając z tzw. *syntactic sugar* czyli uproszczonej składni, która pozwala skrócić kod wykonujący daną czynność:
-```python
-3 > 2 > 1      # True
-3 > 10 > 1     # False
-```
-
-**Spójniki logiczne - podsumowanie:**
-- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
-- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
-- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
-- Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wtedy spójnik *and* ma pierwszeństwo przed *or*
-- Aby połączyć kilka warunków logicznych dotyczących relacji mniejszości lub większości możemy użyć kilku znaków typu <, >, <=, ... w jednej linii
+	Spójniki logiczne służą do łączenia dwóch lub więcej warunków logicznych. Wyróżniamy dwa podstawowe spójniki: *and* oraz *or*. *and* oznacza że dla dwóch warunków logicznych oba muszą być prawdziwe żeby całość uznać za prawdę natomiast *or* oznacza że przynajmniej jeden musi być spełniony.
+	
+	```python
+	true = True
+	false = False
+	```
+	
+	***and***
+	```python
+	true and true     # True
+	true and false    # False
+	false and true    # False
+	false and false   # False
+	```
+	
+	***or***
+	```python
+	true or true     # True
+	true or false    # True
+	false or true    # True
+	false or false   # False
+	```
+	
+	Oprócz tego istnieje również spójnik *xor* czyli *exclusive or*. Oznacza on, że aby warunki połączone takim spójnikiem zwróciły *True* prawdziwy musi być dokładnie jeden z nich. Jako spójnik *xor* używamy znaku `^`:
+	
+	```python
+	true ^ true     # False
+	true ^ false    # True
+	false ^ true    # True
+	false ^ false   # False
+	```
+	
+	---
+	Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wówczas należy pamiętać o kolejności obowiązywania spójników - pierwszeństwo ma *and* a za nim jest *or*. Oprócz tego obowiązują nawiasy, które mają pierwszeństwo również przed *and*. Poniżej kilka przykładów tego co zwrócą kombinacje warunków logicznych:
+	```python
+	True and True and False   # False
+	True or False or False    # True
+	True or True and False    # True
+	(True or True) and False  # False
+	False or True and False   # False
+	```
+	
+	Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub większości możemy to zapisać korzystając z tzw. *syntactic sugar* czyli uproszczonej składni, która pozwala skrócić kod wykonujący daną czynność:
+	```python
+	3 > 2 > 1      # True
+	3 > 10 > 1     # False
+	```
+	
+	**Spójniki logiczne - podsumowanie:**
+	- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
+	- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
+	- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
+	- Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wtedy spójnik *and* ma pierwszeństwo przed *or*
+	- Aby połączyć kilka warunków logicznych dotyczących relacji mniejszości lub większości możemy użyć kilku znaków typu <, >, <=, ... w jednej linii
 ---
 ---
 ---
@@ -166,7 +166,9 @@ if not 0:   # not 0 --> not False --> True
 ---
 &nbsp;
 ### 4.4 Instrukcja if-else
-Jeśli chcemy aby jeden blok kodu wykonał się w przypadku spełnienia warunku logicznego a inny w *przeciwnym wypadku* używamy instrukcji *if-else*. Jej składnia jest rozwinięciem składni instrukcji *if*. Po pierwszym wciętym bloku kodu należy napisać słowo kluczowe *else* (oraz dwukropek) po czym w kolejnym wciętym bloku napisać zbiór instrukcji które mają wykonać się jeśli nie zostanie spełniony warunek logiczny:
+Jeśli chcemy aby jeden blok kodu wykonał się w przypadku spełnienia warunku logicznego a inny w *przeciwnym wypadku* używamy instrukcji *if-else*. Jej składnia jest rozwinięciem składni instrukcji *if*. Po pierwszym wciętym bloku kodu należy napisać słowo kluczowe *else* (oraz dwukropek) po czym w kolejnym wciętym bloku znajduje się zbiór instrukcji które mają się wykonać jeśli nie zostanie spełniony warunek logiczny.
+
+Poniżej kilka przykładów:
 ```python
 number_of_zombies = 3
 number_of_humans = 0
@@ -187,7 +189,7 @@ human_wins_battle = True
 if human_wins_battle:
     human_experience += 1
 else:
-    print("Gramy dalej")
+    print("Kontynuujemy")
     
 
 print(f"Wartość doświadczenia po bitwie: {human_experience}")
@@ -210,7 +212,7 @@ print(x)
 ```
 
 ---
-Python umożliwia również przypisywać wartości do zmiennych za pomocą skróconej wersji instrukcji `if-else`:
+Python umożliwia również przypisywanie wartości do zmiennych za pomocą skróconej wersji instrukcji `if-else`:
 ```python
 human_power = 4
 zombie_power = 3
