--- a/Python podstawowy/5. Pętle.md
+++ b/Python podstawowy/5. Pętle.md
@@ -18,7 +18,7 @@ range(6)
 # range(0, 6)
 ```
 
-Możemy oczywiście wstawić jako pierwszą i ostatnią wartość zakresu dowolną wartość. Ich kolejność powinna być rosnąca, w przeciwnym wypadku `range` nie zwróci nam żadnych wartości:
+Możemy oczywiście wstawić jako lewą i prawą granicę zakresu dowolną wartość. Ich kolejność powinna być rosnąca, w przeciwnym wypadku `range` nie zwróci żadnych wartości:
 
 ```python
 range(3, 9)
@@ -72,7 +72,7 @@ print("Postacie się poruszają")
 print("Postacie walczą\n\n"
 ```
 
-Każda iteracja (tura) wymagałaby ponownego napisania tego samego kodu. Poza tym jeśli iteracji byłoby kilkadziesiąt, kilkaset czy kilka tysięcy to tego kodu byłoby bardzo dużo. Zresztą wcale nie musimy z góry wiedzieć ile iteracji będzie miała symulacja.
+Każda iteracja wymagałaby ponownego napisania tego samego kodu. Poza tym jeśli iteracji byłoby kilkadziesiąt, kilkaset czy kilka tysięcy to tego kodu byłoby bardzo dużo. Zresztą wcale nie musimy z góry wiedzieć ile iteracji będzie miała symulacja.
 
 Do tego właśnie służą pętle - aby określony kawałek kodu wykonać wielokrotnie ale napisać go tylko raz. Jest to bardzo często wykorzystywany element sterowania przepływem programu. W Pythonie istnieją dwa rodzaje pętli spośród których częściej spotykaną jest pętla `for`. Używamy jej kiedy **wiemy z góry ile razy kod ma się wykonać**. W tej pętli istnieje specjalna zmienna - tzw. **iterator** - która w każdej iteracji przyjmuje określoną wartość. Powyższy kod przepisany z użyciem pętli `for` wyglądałby następująco:
 
@@ -143,7 +143,7 @@ for feature in human_dict:
 # Feature: experience, value: 4
 ```
 
-Jeśli chcemy dostać się zarówno do klucza jak i wartości możemy użyć funkcji `items()` oraz użyć **dwóch iteratorów**:
+Jeśli chcemy dostać się zarówno do klucza jak i wartości możemy skorzystać z funkcji `items()` oraz użyć **dwóch iteratorów**:
 
 ```python
 human_dict = {"x": 1, "y": -4, "velocity": 5, "power": 8, "experience": 4}
@@ -188,7 +188,7 @@ while i > 0:
 # 1
 ```
 
-Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany przez zombie i zamienia się w niego a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0 symulacja się zatrzymuje.
+Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany i zamienia się w zombie a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0 symulacja się zatrzymuje.
 
 ```python
 number_of_humans = 10
@@ -227,7 +227,7 @@ while number_of_humans > 0 and number_of_zombies > 0:
 Do sterowania przepływem pętli możemy wykorzystać instrukcje `break` oraz `continue`. Ich działanie jest następujące:
 
 #### 5.3.1 `break`
-Kiedy dojdziemy w kodzie do miejsca, w którym znajduje się instrukcja `break` wychodzimy z pętli. Ten mechanizm jest często wykorzystywany w pętli `while`, w której definicji nie ma określonego warunku kiedy mamy z niej wyjść, ale dalej w kodzie znajduje się instrukcja warunkowa, której wykonanie wiąże się z wyjściem z pętli:
+Kiedy dojdziemy w kodzie do miejsca, w którym znajduje się instrukcja `break` wychodzimy z pętli. Ten mechanizm jest często wykorzystywany w pętli `while` kiedy nie ma określonego warunku wyjścia. Zamiast tego w kodzie znajduje się instrukcja warunkowa, której wykonanie wiąże się z wyjściem z pętli:
 ```python
 i = 4
 
@@ -383,7 +383,7 @@ for h, power in enumerate(humans_power):
 ---
 &nbsp;
 ### 5.6 list comprehension
-Jednym z charakterystycznych dla Pythona elementów języka jest tzw. wyrażenie listotwórcze czyli *list comprehension*. Aby utworzyć listę korzystając w tym celu z pętli `for` zapisując wszystko w jednej linijce  możemy użyć nastepującej notacji. To co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
+Jednym z charakterystycznych dla Pythona elementów języka jest tzw. wyrażenie listotwórcze czyli *list comprehension*. Aby utworzyć listę korzystając w tym celu z pętli `for` i zapisując wszystko w jednej linijce możemy użyć nastepującej notacji. To co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
 
 ```python
 tuple_of_numbers = (1, 2, 3, 4, 5, 6, 7)
@@ -394,7 +394,7 @@ tuple_of_numbers = (1, 2, 3, 4, 5, 6, 7)
 # [1, 2, 3, 4, 5, 6, 7]
 ```
 
-Powyższy przykład jest trywialny i polega po prostu na "przepisaniu" listy na tuplę, ale pokazuje on najważniejsze elementy składni. Poniżej znajdują się inne przykłady. W *list comprehension* mogą znajdować się również instrukcje warunkowe:
+Powyższy przykład jest trywialny i polega wyłącznie na "przepisaniu" tupli na listę, ale pokazuje on najważniejsze elementy składni. Poniżej można znaleźć inne przykłady. W *list comprehension* mogą znajdować się również instrukcje warunkowe:
 
 ```python
 [item * 2 for item in tuple_of_numbers]
